--- a/css/dataTables.bootstrap5.css
+++ b/css/dataTables.bootstrap5.css
@@ -320,9 +320,9 @@ div.table-responsive > div.dataTables_wrapper > div.row > div[class^=col-]:last-
   padding-right: 0;
 }
 
-table.dataTable.table-striped > tbody > tr:nth-of-type(2n+1) {
+table.dataTable.table-striped > tbody > tr:nth-of-type(2n+1) > * {
   --bs-table-accent-bg: transparent;
 }
-table.dataTable.table-striped > tbody > tr.odd {
+table.dataTable.table-striped > tbody > tr.odd > * {
   --bs-table-accent-bg: var(--bs-table-striped-bg);
 }
