--- a/css/dataTables.bootstrap5.css
+++ b/css/dataTables.bootstrap5.css
@@ -122,6 +122,22 @@ table.dataTable.nowrap th,
 table.dataTable.nowrap td {
   white-space: nowrap;
 }
+table.dataTable.table-striped > tbody > tr:nth-of-type(2n+1) > * {
+  box-shadow: none;
+}
+table.dataTable > tbody > tr {
+  background-color: transparent;
+}
+table.dataTable > tbody > tr.selected > * {
+  box-shadow: inset 0 0 0 9999px rgba(13, 110, 253, 0.9);
+  color: white;
+}
+table.dataTable.table-striped > tbody > tr.odd > * {
+  box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.05);
+}
+table.dataTable.table-striped > tbody > tr.odd.selected > * {
+  box-shadow: inset 0 0 0 9999px rgba(13, 110, 253, 0.95);
+}
 
 div.dataTables_wrapper div.dataTables_length label {
   font-weight: normal;
@@ -318,11 +334,4 @@ div.table-responsive > div.dataTables_wrapper > div.row > div[class^=col-]:first
 }
 div.table-responsive > div.dataTables_wrapper > div.row > div[class^=col-]:last-child {
   padding-right: 0;
-}
-
-table.dataTable.table-striped > tbody > tr:nth-of-type(2n+1) > * {
-  --bs-table-accent-bg: transparent;
-}
-table.dataTable.table-striped > tbody > tr.odd > * {
-  --bs-table-accent-bg: var(--bs-table-striped-bg);
 }
