3bc6d8d38b625f20e4af2f92f2f6a51e2831a54d Fix: Make the DataTable container position: relative for all styling integrations.
Sync to source repo @3bc6d8d38b625f20e4af2f92f2f6a51e2831a54d

--- a/css/dataTables.bootstrap5.css
+++ b/css/dataTables.bootstrap5.css
@@ -447,6 +447,9 @@ div.dt-container div.dt-layout-table > div {
     margin-left: 0;
   }
 }
+div.dt-container {
+  position: relative;
+}
 div.dt-container div.dt-length label {
   font-weight: normal;
   text-align: left;
