--- a/css/dataTables.bootstrap5.css
+++ b/css/dataTables.bootstrap5.css
@@ -550,7 +550,7 @@ table.dataTable.table-sm > thead > tr td.dt-ordering-desc span.dt-column-order {
 table.dataTable.table-sm > thead > tr th.dt-type-date span.dt-column-order, table.dataTable.table-sm > thead > tr th.dt-type-numeric span.dt-column-order,
 table.dataTable.table-sm > thead > tr td.dt-type-date span.dt-column-order,
 table.dataTable.table-sm > thead > tr td.dt-type-numeric span.dt-column-order {
-  right: 0.25rem;
+  left: 0.25rem;
 }
 
 div.dt-scroll-head table.table-bordered {
